Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
August 13, 2023


Several old preference items removed.

Lander descent/ascent rate ranged and grow faster with XP.
Lander appearance vertical range increased to upper half of arena.

Smart bomb resupply XP increased to 20,000.

Player ship input handling directly updates its 
navigation control state instead of using an 
intermediate state array; UpdatePlayerShipInputs removed.

ILiveGameObject's motion physics changed to use 
explicit duration instead of computed from current game time.
GameTime() function commented out since we shouldn't use it.

ExplodeObject renamed to DestroyObject; explosion 
is a boolean parameter.

Game object processor marks objects as dead and calls 
their OnAboutToDie method instead of each object class 
doing it in their Explode() method.

Most Explode() method code now uses AddExplosionDebris().

Intro screen moved company name to center, then fades it out
as title collapses around it.

Player ship's max thrust preference increased to make 
speed closer to the arcade version.

Global replace of 'int' with 'int32'.

Code cleanup of mapper classes.
