@@ -52,6 +52,199 @@ void UDefconIntroViewBase::NativeOnInitialized()
 
 
 	FString Text; // todo:
+
+#if 1
+	Text =
+		"22.9367 -2.3782 m\n"
+		"39.2491 -2.3782 L\n"
+		"39.2491 -14.7618 L\n"
+		"22.9367 -14.7618 L\n"
+		"22.9367 -2.3782 L\n"
+		"18.0617 -17.0657 m\n"
+		"39.3447 -17.0657 L\n"
+		"44.1241 -14.7618 L\n"
+		"44.1241 -2.3782 L\n"
+		"39.3447 -0.0743 L\n"
+		"18.0617 -0.0743 L\n"
+		"18.0617 -17.0657 L\n"
+		"49.9821 -17.0657 m\n"
+		"49.9821 -0.0743 L\n"
+		"73.8169 -0.0743 L\n"
+		"69.3049 -2.3782 L\n"
+		"54.8571 -2.3782 L\n"
+		"54.8571 -7.1993 L\n"
+		"71.5609 -7.1993 L\n"
+		"66.953 -9.5032 L\n"
+		"54.8571 -9.5032 L\n"
+		"54.8571 -14.7618 L\n"
+		"73.8169 -14.7618 L\n"
+		"69.3049 -17.0657 L\n"
+		"49.9821 -17.0657 L\n"
+		"77.486 -0.0743 m\n"
+		"101.7528 -0.0743 L\n"
+		"97.2408 -2.3782 L\n"
+		"82.361 -2.3782 L\n"
+		"82.361 -7.4493 L\n"
+		"99.1608 -7.4493 L\n"
+		"94.4569 -9.7532 L\n"
+		"82.361 -9.7532 L\n"
+		"82.361 -17.07 L\n"
+		"77.486 -17.07 L\n"
+		"77.486 -0.0743 L\n"
+		"103.2146 -17.0657 m\n"
+		"103.2146 -0.0743 L\n"
+		"127.0493 -0.0743 L\n"
+		"122.5374 -2.3782 L\n"
+		"108.0895 -2.3782 L\n"
+		"108.0895 -7.1993 L\n"
+		"124.7933 -7.1993 L\n"
+		"120.1854 -9.5032 L\n"
+		"108.0895 -9.5032 L\n"
+		"108.0895 -14.7618 L\n"
+		"127.0493 -14.7618 L\n"
+		"122.5374 -17.0657 L\n"
+		"103.2146 -17.0657 L\n"
+		"130.7243 -0.8162 m\n"
+		"135.3376 0.2425 L\n"
+		"151.7533 -12.8383 L\n"
+		"151.8492 -12.8383 L\n"
+		"151.8492 -0.8162 L\n"
+		"156.4625 0.2425 L\n"
+		"156.4625 -17.07 L\n"
+		"151.8012 -17.07 L\n"
+		"135.4333 -3.942 L\n"
+		"135.3376 -3.942 L\n"
+		"135.3376 -17.07 L\n"
+		"130.7243 -17.07 L\n"
+		"130.7243 -0.8162 L\n"
+		"162.7639 -2.3782 m\n"
+		"167.4476 -0.0743 L\n"
+		"191.3982 -0.0743 L\n"
+		"186.6056 -2.3782 L\n"
+		"167.6389 -2.3782 L\n"
+		"167.6389 -7.1993 L\n"
+		"183.6425 -7.1993 L\n"
+		"188.3263 -9.6468 L\n"
+		"188.3263 -14.6184 L\n"
+		"183.6425 -17.0657 L\n"
+		"160.0759 -17.0657 L\n"
+		"164.58 -14.7618 L\n"
+		"183.4513 -14.7618 L\n"
+		"183.4513 -9.5032 L\n"
+		"167.1609 -9.5032 L\n"
+		"162.7639 -7.3433 L\n"
+		"162.7639 -2.3782 L\n"
+		"194.5593 -17.0657 m\n"
+		"194.5593 -0.0743 L\n"
+		"218.394 -0.0743 L\n"
+		"213.8821 -2.3782 L\n"
+		"199.4343 -2.3782 L\n"
+		"199.4343 -7.1993 L\n"
+		"216.1381 -7.1993 L\n"
+		"211.5301 -9.5032 L\n"
+		"199.4343 -9.5032 L\n"
+		"199.4343 -14.7618 L\n"
+		"218.394 -14.7618 L\n"
+		"213.8821 -17.0657 L\n"
+		"194.5593 -17.0657 L\n"
+		"0.0601 -31.3782 m\n"
+		"4.8395 -29.0743 L\n"
+		"21.6389 -29.0743 L\n"
+		"26.1509 -31.3782 L\n"
+		"4.9351 -31.3782 L\n"
+		"4.9351 -43.7618 L\n"
+		"26.4389 -43.7618 L\n"
+		"21.9269 -46.0657 L\n"
+		"4.8395 -46.0657 L\n"
+		"0.0601 -43.7618 L\n"
+		"0.0601 -31.3782 L\n"
+		"34.2152 -31.3782 m\n"
+		"50.8401 -31.3782 L\n"
+		"50.8401 -43.7618 L\n"
+		"34.2152 -43.7618 L\n"
+		"34.2152 -31.3782 L\n"
+		"29.3402 -43.7618 m\n"
+		"33.9283 -46.0657 L\n"
+		"51.1268 -46.0657 L\n"
+		"55.7151 -43.7618 L\n"
+		"55.7151 -31.3782 L\n"
+		"51.1268 -29.0743 L\n"
+		"33.9283 -29.0743 L\n"
+		"29.3402 -31.3782 L\n"
+		"29.3402 -43.7618 L\n"
+		"61.5789 -29.8162 m\n"
+		"66.1922 -28.7575 L\n"
+		"82.6079 -41.8383 L\n"
+		"82.7038 -41.8383 L\n"
+		"82.7038 -29.8162 L\n"
+		"87.3171 -28.7575 L\n"
+		"87.3171 -46.07 L\n"
+		"82.6558 -46.07 L\n"
+		"66.2879 -32.942 L\n"
+		"66.1922 -32.942 L\n"
+		"66.1922 -46.07 L\n"
+		"61.5789 -46.07 L\n"
+		"61.5789 -29.8162 L\n"
+		"98.3685 -31.3782 m\n"
+		"114.6809 -31.3782 L\n"
+		"114.6809 -43.7618 L\n"
+		"98.3685 -43.7618 L\n"
+		"98.3685 -31.3782 L\n"
+		"93.4935 -46.0657 m\n"
+		"114.7765 -46.0657 L\n"
+		"119.5559 -43.7618 L\n"
+		"119.5559 -31.3782 L\n"
+		"114.7765 -29.0743 L\n"
+		"93.4935 -29.0743 L\n"
+		"93.4935 -46.0657 L\n"
+		"126.1014 -29.07 m\n"
+		"130.9764 -29.07 L\n"
+		"130.9764 -46.07 L\n"
+		"126.1014 -46.07 L\n"
+		"126.1014 -29.07 L\n"
+		"145.1734 -31.3782 m\n"
+		"133.3175 -31.3782 L\n"
+		"138.0215 -29.0743 L\n"
+		"161.9042 -29.0743 L\n"
+		"157.2003 -31.3782 L\n"
+		"150.0484 -31.3782 L\n"
+		"150.0484 -46.07 L\n"
+		"145.1734 -46.07 L\n"
+		"145.1734 -31.3782 L\n"
+		"164.2144 -29.07 m\n"
+		"169.0894 -29.07 L\n"
+		"169.0894 -46.07 L\n"
+		"164.2144 -46.07 L\n"
+		"164.2144 -29.07 L\n"
+		"180.4739 -31.3782 m\n"
+		"197.0989 -31.3782 L\n"
+		"197.0989 -43.7618 L\n"
+		"180.4739 -43.7618 L\n"
+		"180.4739 -31.3782 L\n"
+		"175.599 -43.7618 m\n"
+		"180.1871 -46.0657 L\n"
+		"197.3856 -46.0657 L\n"
+		"201.9738 -43.7618 L\n"
+		"201.9738 -31.3782 L\n"
+		"197.3856 -29.0743 L\n"
+		"180.1871 -29.0743 L\n"
+		"175.599 -31.3782 L\n"
+		"175.599 -43.7618 L\n"
+		"207.8377 -29.8162 m\n"
+		"212.451 -28.7575 L\n"
+		"228.8667 -41.8383 L\n"
+		"228.9626 -41.8383 L\n"
+		"228.9626 -29.8162 L\n"
+		"233.5759 -28.7575 L\n"
+		"233.5759 -46.07 L\n"
+		"228.9146 -46.07 L\n"
+		"212.5467 -32.942 L\n"
+		"212.451 -32.942 L\n"
+		"212.451 -46.07 L\n"
+		"207.8377 -46.07 L\n"
+		"207.8377 -29.8162 L\n"
+	;
+#else
 	const FString Filespec = FPaths::ProjectContentDir() / TEXT("Textures") / TEXT("gamename.dat");
 
 	if(!FFileHelper::LoadFileToString(Text, *Filespec))
@@ -59,7 +252,7 @@ void UDefconIntroViewBase::NativeOnInitialized()
 		UE_LOG(LogGame, Error, TEXT("Can't load Content/Textures/gamename.dat file"));
 		return;
 	}
-
+#endif
 	//DebugSavePath->SetVisibility(ESlateVisibility::Visible);
 	//DebugSavePath->SetText(FText::FromString(Filespec));
 
